--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.weightloss_pathway_project">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeightLoss_Pathway_project">
+        <activity
+            android:name=".Help"
+            android:exported="false" />
+        <activity
+            android:name=".WeeklyTab"
+            android:exported="false" />
         <activity
             android:name=".Message"
             android:exported="false" />
