--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-database-collection:18.0.0'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     testImplementation 'junit:junit:5.8'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
